kubernetes/apps/production/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
  namespace: apps-staging
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-staging-cloudflare
spec:
  tls:
    - hosts:
        - linkding.ninjatronics.io
      secretName: linkding-ninjatronics-io-tls
  rules:
    - host: linkding.ninjatronics.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 9090
